--- a/styles.css
+++ b/styles.css
@@ -1,69 +1,96 @@
 @font-face {
-    font-family: "Caribbean";
-    src: url('./Caribbean.ttf') format("truetype");
-    
+  font-family: "Caribbean";
+  src: url("./Caribbean.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: "Gilroy-Medium";
-    src: url('./Gilroy-Medium.ttf') format("truetype");
+  font-family: "Gilroy-Medium";
+  src: url("./Gilroy-Medium.ttf") format("truetype");
 }
 
-
 html {
-   background-color: #EBE4D1;
-   
+  background-color: #ebe4d1;
 }
 
 .main {
-    position: relative;
-    width: 1200px;
-    font-family: "Gilroy-Medium" !important;
+  position: relative;
+  width: 1200px;
+  font-family: "Gilroy-Medium" !important;
 }
 
 .title-1 {
-    font-family: "Caribbean" !important;
+  font-family: "Caribbean" !important;
 }
 
 .title-2 {
-    font-family: "Caribbean" !important;
+  font-family: "Caribbean" !important;
 }
 
 #grad {
-    position: absolute;
-    z-index: -999;
-    top: 25%;
-    right: 0;
-    width:70%;
-    height: 100vh;
-    background-image: url(grad.svg);
-    background-repeat: no-repeat;
-    background-size: 100%;
+  position: absolute;
+  z-index: -999;
+  top: 0;
+  right: 0;
+  width: 60%;
+  height: 100vh;
+  background-image: url(grad_corner.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 #ship {
-    position: absolute;
-    z-index: -998;
-    top: 25%;
-    right: 0;
-    width: 40%;
-    height: 100vh;
-    background-image: url(ship3.svg);
-    background-repeat: no-repeat;
-    background-size: 100%;
+  position: absolute;
+  z-index: -998;
+  top: 20px;
+  right: -200px;
+  width: 30vw;
+  height: 80vh !important;
+  background-image: url(ship.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+#waves {
+  opacity: 0.95;
+  position: absolute;
+  z-index: -999;
+  bottom: -450px;
+  right: 0;
+  width: 100%;
+  height: 100% !important;
+  background-image: url(waves.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+#logo {
+  width: 100px;
+  height: 100px;
+  background-image: url(logo.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.button {
+  /* Rectangle 3 */
+
+  background: #ebe4d1;
+  border: 2px solid #000000;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 0px #000000;
+  border-radius: 100px;
 }
 
 /* For Mobile */
 @media screen and (max-width: 640px) {
-    .main {
-        width: 90%;
-    }
+  .main {
+    width: 90%;
+  }
 }
 
 /* For Tablets */
 @media screen and (min-width: 640px) and (max-width: 768px) {
-    .main {
-        width: 500px;
-    }
+  .main {
+    width: 500px;
+  }
 }
-
