button color update

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ html {
 .button {
   /* Rectangle 3 */
 
-  background: #ebe4d1;
+  background: #FFFFFF;
   border: 2px solid #000000;
   box-sizing: border-box;
   box-shadow: 0px 4px 0px #000000;
