--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Caribbean";
-  src: url("./Caribbean.ttf") format("truetype");
+  font-family: "Dionysus";
+  src: url("./Dionysus.ttf") format("truetype");
 }
 
 @font-face {
@@ -16,33 +16,18 @@ html {
   position: relative;
   width: 60%;
   font-family: "Gilroy-Medium" !important;
-  color: #000000;
 }
 
 .title-1 {
-  font-family: "Caribbean" !important;
-  color: #000000;
+  font-family: "Dionysus" !important;
 }
 
 .title-2 {
-  font-family: "Caribbean" !important;
-  color: #FFFFFF;
+  font-family: "Dionysus" !important;
 }
 
-#grad {
-  display: block;
-  position: absolute;
-  z-index: -999;
-  top: 0;
-  right: 0;
-  width: 60%;
-  height: 100vh;
-  background-image: url(grad_corner.svg);
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
 
-#ship {
+#column {
   display: block;
   position: absolute;
   z-index: -998;
@@ -50,12 +35,12 @@ html {
   right: -200px;
   width: 30vw;
   height: 80vh !important;
-  background-image: url(ship.svg);
+  background-image: url(column.svg);
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
-#waves {
+#linegreek {
   display: block;
   opacity: 0.95;
   position: absolute;
@@ -64,7 +49,7 @@ html {
   right: 0;
   width: 100%;
   height: 100% !important;
-  background-image: url(waves.svg);
+  background-image: url(linegreek.svg);
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -80,7 +65,7 @@ html {
 .button {
   /* Rectangle 3 */
 
-  background: #FFFFFF;
+  background: #ebe4d1;
   border: 2px solid #000000;
   box-sizing: border-box;
   box-shadow: 0px 4px 0px #000000;
@@ -94,7 +79,7 @@ html {
     margin-left: 20px;
     margin-right: 20px;
   }
-  #ship {
+  #column {
     display: none;
     position: absolute;
     z-index: -998;
@@ -102,33 +87,24 @@ html {
     right: 0px;
     width: 30vw;
     height: 80vh !important;
-    background-image: url(ship.svg);
+    background-image: url(column.svg);
     background-repeat: no-repeat;
     background-size: 100%;
   }
-  #grad {
-    position: absolute;
-    z-index: -999;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100vh;
-    background-image: url(grad_corner.svg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-  }
+  
 
-  #ship {
+  #column {
     position: absolute;
     z-index: -998;
     top: 20px;
     right: -200px;
     width: 30vw;
     height: 80vh !important;
-    background-image: url(ship.svg);
+    background-image: url(column.svg);
     background-repeat: no-repeat;
     background-size: 100%;
   }
+}
 
 
 /* .Profile h1{
