--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ html {
   right: -200px;
   width: 30vw;
   height: 80vh !important;
-  background-image: url(column.svg);
+  background-image: url(column.png);
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -49,7 +49,7 @@ html {
   right: 0;
   width: 100%;
   height: 100% !important;
-  background-image: url(linegreek.svg);
+  background-image: url(linegreek.png);
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -57,7 +57,7 @@ html {
 #logo {
   width: 100px;
   height: 100px;
-  background-image: url(logo.svg);
+  background-image: url(logo.lng);
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -87,7 +87,7 @@ html {
     right: 0px;
     width: 30vw;
     height: 80vh !important;
-    background-image: url(column.svg);
+    background-image: url(column.png);
     background-repeat: no-repeat;
     background-size: 100%;
   }
@@ -100,7 +100,7 @@ html {
     right: -200px;
     width: 30vw;
     height: 80vh !important;
-    background-image: url(column.svg);
+    background-image: url(column.png);
     background-repeat: no-repeat;
     background-size: 100%;
   }
@@ -132,7 +132,7 @@ html {
     right: 0;
     width: 200%;
     height: 100% !important;
-    background-image: url(waves.svg);
+    background-image: url(waves.png);
     background-repeat: no-repeat;
     background-size: 100%;
   }
