--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ html {
     .main {
         width: 90%;
     }
-  #waves {
+  #linegreek {
     display: block;
     opacity: 0.95;
     position: absolute;
@@ -132,7 +132,7 @@ html {
     right: 0;
     width: 200%;
     height: 100% !important;
-    background-image: url(waves.png);
+    background-image: url(linegreek.png);
     background-repeat: no-repeat;
     background-size: 100%;
   }
