Fixing images and formatting

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ html {
   opacity: 0.95;
   position: absolute;
   z-index: -999;
-  bottom: -450px;
+  bottom: 0px;
   right: 0;
   width: 100%;
   height: 100% !important;
@@ -57,7 +57,7 @@ html {
 #logo {
   width: 100px;
   height: 100px;
-  background-image: url(logo.lng);
+  background-image: url(logo.png);
   background-repeat: no-repeat;
   background-size: 100%;
 }
